callee: fixed 'Missed calls:' title button clickable across the whole window width

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -620,7 +620,9 @@ input:disabled + .slider {
 
 	<div id="ownlink" style="opacity:0.9; padding-top:10px; padding-bottom:10px; display:none;"></div>
 
-	<div id="missedCallsTitle" class="callListTitle" onClick="clrMissedCalls();" style="cursor:pointer;display:none;">Missed calls:</div>
+	<div id="missedCallsTitle" class="callListTitle" style="display:none;">
+		<span onClick="clrMissedCalls();" style="cursor:pointer;">Missed calls:</span>
+	</div>
 	<div id="missedCalls" class="callList" style="display:none;"></div>
 
 	<div id="timer" class="timer">4:32</div>
