caller fix issue with clear:both shifting h1 down

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -521,7 +521,7 @@ input[type=submit]:focus {
 <div id="container">
 	<img id="menu" onclick="menuDialogOpen(menuDialogElement,1)" class="iconbutton"src="menu.svg" _style="position:relative; float:right; width:25px; margin-top:6px; margin-right:10px; margin-left:22px; z-index:100; user-select:none; cursor:pointer;">
 	<img id="camera" class="iconbutton" src="camera.svg" _style="position:relative; float:right; width:30px; margin-top:5.5px; margin-left:22px; z-index:100; user-select:none; cursor:pointer; transition:opacity 500ms;" onclick="videoSwitch(false)">
-	<div style="clear:both"></div>
+	<span style="clear:both"></span>
 
 	<h1 id="title">WebCall</h1>
 
