caller css refinements

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -266,7 +266,7 @@ a, a:link, a:visited, a:active {
 
 .msgbox {
 	font-size:1.0em;
-	width:92%;
+	width:88%;
 	max-width:560px;
 	height:6.2em;
 	padding:6px;
@@ -560,7 +560,7 @@ input[type=submit]:focus {
 			</span>
 
 			<span id="muteMicDiv" style="white-space: nowrap;">
-				<input type="checkbox" id="muteMic" class="checkbox" style="margin-top:6px;margin-left:0;" />
+				<input type="checkbox" id="muteMic" class="checkbox" style="margin-top:6px;margin-left:2px;" />
 				<label id="muteMiclabel" for="muteMic" class="menulabel" style="font-size:0.9em;">Mic muted</label>
 			</span>
 		</div>
