client.js: if no height limit is set via addStyleString, iframeWindowOpen() now uses as much vertical space as it can; callee.js: openDialUrl(), openDialUrlx(), openNews() and openContacts()  now use as much horizontal space as they can; caller css experiment mode is over

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -260,7 +260,7 @@ a, a:link, a:visited, a:active {
 	min-height:24px;
 	max-width:520px;
 	transition:opacity 400ms ease-in-out;
-    color:#ee7;
+    color:#eee;
     font-weight:600;
 }
 
