callee.js adds clientVersion info to bottom line (visible on screen)

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -595,7 +595,7 @@ input[type=submit]:focus {
 
 	<div id="timer" class="timer">0:00</div>
 
-	<div style="opacity:0.7;padding-top:10px;user-select:none;">WebCall1 by <a href="https://timur.mobi/webcall">timur.mobi</a></div>
+	<div style="opacity:0.7;padding-top:10px;user-select:none;">WebCall1 by <a href="https://timur.mobi/webcall">timur.mobi</a> <span id="addinfo"></span></div>
 </div>
 
 <!-- dial-id -->
