--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -29,23 +29,28 @@ div#container {
 	overflow:hidden;
 }
 
+.disableElement {
+    pointer-events: none;
+    opacity: 0.6;
+}
+
 h1 {
 	font-size:1.2em;
 	font-weight:600;
 	user-select:none;
 	margin-block-start:0;
 	margin-block-end:0;
-	padding-top:1px;
+	padding-top:3px;
 	padding-bottom:4px;
 	line-height:1.3em;
 }
 
 .answerButtons {
 	display:grid;
-	grid-template-columns: 1fr 1fr 30px;
+	grid-template-columns: 1fr 1fr 8px;
 	column-gap: 12px;
 	list-style-type:none;
-	max-width:360px;
+	max-width:320px;
 	padding-top:12px;
 	padding-bottom:12px;
 }
@@ -538,13 +543,17 @@ input[type=submit]:focus {
 
 	<div id="status" class="status"></div>
 
-	<div id="calleeOnline" style="display:none">
-		<div class="answerButtons">
-			<button id="callButton" class="mainbutton mainbuttonGreen" _style="background-color:#0c59;">Call</button>
-			<button id="hangupButton" class="mainbutton mainbuttonRed" disabled>Hang Up</button>
-			<img id="onlineIndicator" src="" style="width:28px; margin:0.6em 0 0 0; user-select:none;">
-		</div>
+	<div class="answerButtons">
+		<button id="callButton" class="mainbutton mainbuttonGreen" _style="background-color:#0c59;">Call</button>
+		<button id="hangupButton" class="mainbutton mainbuttonRed" disabled>Hang Up</button>
+		<!--img id="onlineIndicator" src="" style="width:28px; margin:0.6em 0 0 0; user-select:none;"-->
+	</div>
+	<div id="muteMicDiv" style="padding-top:6px; padding-bottom:8px; _white-space:nowrap;">
+		<input type="checkbox" id="muteMic" class="checkbox" style="margin-left:5px;" />
+		<label id="muteMiclabel" for="muteMic" class="menulabel" style="font-size:0.9em;">Mute</label>
+	</div>
 
+	<div id="calleeOnline" _style="display:none">
 		<label class="formlabel" id="avSelectLabel" for="idSelect" style="margin-left:0;margin-top:6px;">
 			<select id="avSelect" class="select" onchange="getStream(this,'html')"></select>
 		</label>
@@ -558,25 +567,26 @@ input[type=submit]:focus {
 				<label for="nickname" id="nicknameLabel" class="nicknameLabel">Nickname:</label>
 				<input id='nickname' class="nicknameForm" type='text' size='12' maxlength='12' value=''>
 			</span>
-
+<!--
 			<span id="muteMicDiv" style="white-space: nowrap;">
 				<input type="checkbox" id="muteMic" class="checkbox" style="margin-top:6px;margin-left:2px;" />
 				<label id="muteMiclabel" for="muteMic" class="menulabel" style="font-size:0.9em;">Mic muted</label>
 			</span>
+-->
 		</div>
-
-		<div id="msgboxdiv" _style="display:none;">
-			<textarea id="msgbox" class="msgbox" spellcheck="false" maxlength="125"></textarea>
-			<div id="textbox" style="display:none;">
-				<form action="javascript:;" onsubmit="submitFormDone(2)">
-					<input name="enterText" id="enterText" type="text" class="formtext"
-						   style="width:95%; max-width:550px;">
-					<input type="submit" name="Submit" id="submitText" value="" style="display:none">
-				</form>
-			</div>
-		</div>
-		<button id="chatButton" style="display:none; margin-top:4px; padding-top:4px; padding-bottom:3px;">TextChat</button>
 	</div>
+
+	<div id="msgboxdiv">
+		<textarea id="msgbox" class="msgbox" spellcheck="false" maxlength="125"></textarea>
+		<div id="textbox" style="display:none;">
+			<form action="javascript:;" onsubmit="submitFormDone(2)">
+				<input name="enterText" id="enterText" type="text" class="formtext"
+					   style="width:95%; max-width:550px;">
+				<input type="submit" name="Submit" id="submitText" value="" style="display:none">
+			</form>
+		</div>
+	</div>
+	<button id="chatButton" style="display:none; margin-top:4px; padding-top:4px; padding-bottom:3px;">TextChat</button>
 
 	<div id="calleeOffline" style="display:none">
 	</div>
@@ -595,7 +605,7 @@ input[type=submit]:focus {
 
 	<div id="timer" class="timer">0:00</div>
 
-	<div style="opacity:0.7;padding-top:10px;user-select:none;">WebCall1 by <a href="https://timur.mobi/webcall">timur.mobi</a> <span id="addinfo"></span></div>
+	<div id="bottom" style="opacity:0.7;padding-top:10px;user-select:none;">WebCall1 by <a href="https://timur.mobi/webcall">timur.mobi</a> <span id="addinfo"></span></div>
 </div>
 
 <!-- dial-id -->
