caller.js: on '(calleeID) is not available at this time' disables all elements (incl answerButtons) instead of removing them; lang.js: 'Available post call' -> 'Data will be available after you have made a call'

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -543,7 +543,7 @@ input[type=submit]:focus {
 
 	<div id="status" class="status"></div>
 
-	<div class="answerButtons">
+	<div id="answerButtons" class="answerButtons">
 		<button id="callButton" class="mainbutton mainbuttonGreen" _style="background-color:#0c59;">Call</button>
 		<button id="hangupButton" class="mainbutton mainbuttonRed" disabled>Hang Up</button>
 		<!--img id="onlineIndicator" src="" style="width:28px; margin:0.6em 0 0 0; user-select:none;"-->
