callee: button label: Hang up -> Hangup

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -546,7 +546,7 @@ input[type=submit]:focus {
 
 	<div id="answerButtons" class="answerButtons">
 		<button id="callButton" class="mainbutton mainbuttonGreen" _style="background-color:#0c59;">Call</button>
-		<button id="hangupButton" class="mainbutton mainbuttonRed" disabled>Hang Up</button>
+		<button id="hangupButton" class="mainbutton mainbuttonRed" disabled>Hangup</button>
 		<!--img id="onlineIndicator" src="" style="width:28px; margin:0.6em 0 0 0; user-select:none;"-->
 	</div>
 	<div id="muteMicDiv" style="padding-top:6px; padding-bottom:8px; _white-space:nowrap;display:none;">
