caller: fixed 3 small UI bugs

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -602,7 +602,7 @@ input[type=submit]:focus {
 
 	<div id="timer" class="timer">0:00</div>
 
-	<div id="bottom" style="opacity:0.7;padding-top:10px;user-select:none;display:none;">WebCall1 by <a href="https://timur.mobi/webcall">timur.mobi</a> <span id="addinfo"></span></div>
+	<div id="bottom" style="opacity:0.7;padding-top:10px;user-select:none;display:none;">WebCall by <a href="https://timur.mobi/webcall">timur.mobi</a> <span id="addinfo"></span></div>
 </div>
 
 <!-- dial-id -->
