caller.js getContact(): prefCallbackID (tok[1]) can now be empty (incognito); idSelector on DialID page will only be shown if domainName differs from location.host; getContactFromForm(): fixed double @ for contactID; httpNotifyCallee.js: addContact(): if callerID is empty -> don't accept

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -625,13 +625,13 @@ input[type=submit]:focus {
 		</label>
 		<br>
 
-		<div id="contactName" style="font-size:0.9em; margin-bottom:8px; display:none;"></div>
+		<div id="contactNickName" style="font-size:0.9em; margin-bottom:8px; display:none;"></div>
 		<!--div id="callerName" style="font-size:0.9em; margin-bottom:6px; display:none;"></div-->
 
 		<!-- idSelect: visible only if more than one id-mapping is specified -->
 		<label class="formlabel" id="idSelect2Label" for="idSelect2"
 			style="margin-left:0;margin-top:16px;display:none;">
-			Callback ID:<br>
+			Your callback ID:<br>
 			<select id="idSelect2" class="select" onchange="changeId(this)"
 				style="margin-top:0;"></select>
 		</label>
