mapping css formtext padding:2px; caller css cleanup

--- a/webroot/callee/mapping/index.html
+++ b/webroot/callee/mapping/index.html
@@ -19,7 +19,6 @@ html {
 body {
 	font-family:Sans-Serif;
 	font-weight:300;
-    font-size:1.05em;
 	margin:0;
 	padding:0;
 }
@@ -83,6 +82,7 @@ input:invalid {
 	border:none;
 	outline:none;
 	box-shadow:none; /* removes red border in FF */
+	padding:2px;
 }
 
 </style>
