--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -529,7 +529,10 @@ input:invalid {
 	<img id="camera" class="iconbutton" src="camera.svg" _style="position:relative; float:right; width:30px; margin-top:5.5px; margin-left:22px; z-index:100; user-select:none; cursor:pointer; transition:opacity 500ms;" onclick="videoSwitch(false)">
 	<span style="clear:both"></span>
 
-	<h1 id="title">WebCall</h1>
+	<div>
+		<img src="arrow-left.svg" id="arrowleft" onclick="history.back();" _class="iconbutton" style="float:left; width:30px; margin-top:3px; margin-right:12px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; display:none;">
+		<h1 id="title" style="float:left">WebCall</h1>
+	</div>
 
 	<!-- code: visible only if no cookie avail -->
 	<div id="codeDiv" style="margin-bottom:12px;margin-left:2px;font-size:1.1em;color:#ff0;display:none;">
