--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -532,6 +532,7 @@ input:invalid {
 	<div>
 		<img src="arrow-left.svg" id="arrowleft" onclick="history.back();" _class="iconbutton" style="float:left; width:30px; margin-top:3px; margin-right:12px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; display:none;">
 		<h1 id="title" style="float:left">WebCall</h1>
+		<span style="clear:both"></span>
 	</div>
 
 	<!-- code: visible only if no cookie avail -->
