--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -40,9 +40,9 @@ h1 {
 	user-select:none;
 	margin-block-start:0;
 	margin-block-end:0;
-	padding-top:3px;
-	padding-bottom:4px;
-	line-height:1.3em;
+	_padding-top:3px;
+	_padding-bottom:4px;
+	_line-height:1.3em;
 }
 
 .answerButtons {
@@ -449,7 +449,7 @@ input:invalid {
 	-webkit-transform: scale(-1, 1);
 }
 .iconbutton {
-	position:relative; float:right; width:30px; margin-left:12px; margin-right:12px; 
+	position:relative; float:right; width:30px; margin-left:12px; margin-right:12px; margin-bottom:6px;
 	z-index:100; user-select:none; cursor:pointer; 
 	transition:all 300ms ease-out;
 	opacity:0.8; 
@@ -525,18 +525,16 @@ input:invalid {
 <div id="dynDialog" style="position:relative; user-select:none; display:none; font-size:1.1em;"></div>
 
 <div id="container">
-	<img id="menu" onclick="menuDialogOpen(menuDialogElement,1)" class="iconbutton" src="menu.svg" _style="position:relative; float:right; width:25px; margin-top:6px; margin-right:10px; margin-left:22px; z-index:100; user-select:none; cursor:pointer;">
-	<img id="camera" class="iconbutton" src="camera.svg" _style="position:relative; float:right; width:30px; margin-top:5.5px; margin-left:22px; z-index:100; user-select:none; cursor:pointer; transition:opacity 500ms;" onclick="videoSwitch(false)">
+	<img src="menu.svg"   id="menu"   class="iconbutton" onclick="menuDialogOpen(menuDialogElement,1)">
+	<img src="camera.svg" id="camera" class="iconbutton" onclick="videoSwitch(false)">
 	<span style="clear:both"></span>
 
-	<div>
-		<img src="arrow-left.svg" id="arrowleft" onclick="history.back();" _class="iconbutton" style="float:left; width:30px; margin-top:3px; margin-right:12px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; display:none;">
-		<h1 id="title" style="float:left">WebCall</h1>
-	</div>
-	<span style="clear:both"></span>
+	<img src="arrow-left.svg" id="arrowleft" onclick="history.back();" _class="iconbutton" style="float:left; width:28px; margin-top:0px; margin-bottom:4px; margin-right:12px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; display:none;">
+	<h1 id="title" style="float:left; margin-top:0px;">WebCall</h1>
+	<div style="clear:both;"></span>
 
 	<!-- code: visible only if no cookie avail -->
-	<div id="codeDiv" style="margin-bottom:12px;margin-left:2px;font-size:1.1em;color:#ff0;display:none;">
+	<div id="codeDiv" style="clear:both; margin-bottom:12px;margin-left:2px;font-size:1.1em;color:#ff0;display:none;">
 		<label id="codeLabel" for="code" style="display:inline-block;">Enter xxx:</label>
 		<input id="code" type="text" size='3' maxlength="3" value=""
 			style="background:#04e;border:none;outline:none;padding:0.3em;margin-right:4px;color:#ddd;font-size:1.0em;width:50px;">
