caller: showing the target ID in the status line

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -529,8 +529,8 @@ input:invalid {
 	<img src="camera.svg" id="camera" class="iconbutton" onclick="videoSwitch(false)">
 	<span style="clear:both"></span>
 
-	<img src="arrow-left.svg" id="arrowleft" onclick="history.back();" _class="iconbutton" style="float:left; width:28px; margin-top:0px; margin-bottom:4px; margin-right:12px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; display:none;">
-	<h1 id="title" style="float:left; margin-top:0px;">WebCall</h1>
+	<img src="arrow-left.svg" id="arrowleft" onclick="history.back();" _class="iconbutton" style="float:left; width:35px; margin-top:0px; _margin-bottom:4px; margin-right:14px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; opacity:0.8; display:none;">
+	<h1 id="title" style="float:left; margin-top:4px;">WebCall</h1>
 	<div style="clear:both;"></span>
 
 	<!-- code: visible only if no cookie avail -->
