--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -37,12 +37,12 @@ div#container {
 }
 
 h1 {
-	font-size:1.25em;
+	font-size:1.3em;
 	font-weight:600;
 	user-select:none;
 	margin-block-start:0;
 	margin-block-end:0;
-	_padding-top:3px;
+	padding-top:1px;
 	_padding-bottom:4px;
 	_line-height:1.3em;
 }
