--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -37,13 +37,14 @@ div#container {
 }
 
 h1 {
-	font-size:1.3em;
+	font-size:1.25em;
 	font-weight:600;
 	user-select:none;
 	margin-block-start:0;
 	margin-block-end:0;
+	padding-left:1px;
 	padding-top:1px;
-	_padding-bottom:4px;
+	padding-bottom:4px;
 	_line-height:1.3em;
 }
 
@@ -262,7 +263,7 @@ a, a:link, a:visited, a:active {
 .status {
 	padding-top:10px;
 	padding-bottom:6px;
-	padding-left:1px;
+	_padding-left:1px;
 	width:98%;
 	min-height:24px;
 	max-width:520px;
