--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -534,7 +534,7 @@ input:invalid {
 
 	<img src="arrow-left.svg" id="arrowleft" onclick="history.back();" _class="iconbutton" style="float:left; width:35px; margin-top:0px; _margin-bottom:4px; margin-right:14px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; opacity:0.8; display:none;">
 	<h1 id="title" style="float:left; margin-top:4px;">WebCall</h1>
-	<div style="clear:both;"></span>
+	<div style="clear:both;"></div>
 
 	<!-- code: visible only if no cookie avail -->
 	<div id="codeDiv" style="clear:both; margin-bottom:12px;margin-left:2px;font-size:1.1em;color:#ff0;display:none;">
