dialed ID delivered to missed calls, shown in tooltip together with greeting msg

--- a/webroot/callee/index.html
+++ b/webroot/callee/index.html
@@ -456,6 +456,12 @@ input:disabled + .slider {
 }
 */
 
+.tooltip {
+  _height: 3em;
+  _width: 10em;
+  _background: yellow;
+  cursor:pointer;
+}
 </style>
 </head>
 
