adjusted arrow-left.svg pathes

--- a/webroot/callee/settings/index.html
+++ b/webroot/callee/settings/index.html
@@ -130,8 +130,7 @@ input[type=submit]:focus {
 
 <body>
 <div id="container">
-	<!--h1>WebCall Settings</h1-->
-	<img src="../../arrow-left.svg" id="arrowleft" onclick="history.back();" _class="iconbutton" style="float:left; width:35px; margin-top:0px; margin-right:14px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; opacity:0.8; display:none;">
+	<img src="../arrow-left.svg" id="arrowleft" onclick="history.back();" _class="iconbutton" style="float:left; width:35px; margin-top:0px; margin-right:14px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; opacity:0.8; display:none;">
 	<h1 style="float:left; margin-top:0px;">WebCall Settings</h1>
 	<div style="clear:both;"></div>
 
