--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -532,7 +532,7 @@ input:invalid {
 	<img src="camera.svg" id="camera" class="iconbutton" onclick="videoSwitch(false)">
 	<span style="clear:both"></span>
 
-	<img src="../arrow-left.svg" id="arrowleft" onclick="history.back();" _class="iconbutton" style="float:left; width:35px; margin-top:0px; _margin-bottom:4px; margin-right:14px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; opacity:0.8; display:none;">
+	<img src="arrow-left.svg" id="arrowleft" onclick="history.back();" _class="iconbutton" style="float:left; width:35px; margin-top:0px; _margin-bottom:4px; margin-right:14px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; opacity:0.8; display:none;">
 	<h1 id="title" style="float:left; margin-top:4px;">WebCall</h1>
 	<div style="clear:both;"></div>
 
@@ -610,7 +610,7 @@ input:invalid {
 
 <!-- dial-id -->
 <div id="enterId" style="display:none">
-	<img src="../arrow-left.svg" id="arrowleftDialID" onclick="history.back();" _class="iconbutton" style="float:left; width:35px; margin-top:0px; _margin-bottom:4px; margin-right:14px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; opacity:0.8; display:none;">
+	<img src="arrow-left.svg" id="arrowleftDialID" onclick="history.back();" _class="iconbutton" style="float:left; width:35px; margin-top:0px; _margin-bottom:4px; margin-right:14px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; opacity:0.8; display:none;">
 	<h1 style="float:left; margin-top:4px;">WebCall Dial ID</h1>
 	<div style="clear:both;"></div>
 
