--- a/webroot/callee/settings/index.html
+++ b/webroot/callee/settings/index.html
@@ -88,12 +88,12 @@ select {
 	max-width:420px;
 	padding:4px 4px; box-sizing:border-box;
 	outline:none;
-	background:#ace;
+	background:#2ae;
 	box-shadow:none; /* removes red border in FF */
 }
 .formtext:focus {
-	background-color: #ada;
-	color:#000;
+	background:#adf;
+	_color:#000;
 }
 input[type=submit] {
 	font-size:1.0em;
@@ -107,6 +107,9 @@ input[type=submit] {
 input[type=submit]:focus {
 	background-color: #8c8;
 	color: #000;
+}
+input:invalid {
+	color: #f11;
 }
 .checkbox {
 	-webkit-appearance: none;
@@ -138,7 +141,8 @@ input[type=submit]:focus {
 
 	<form action="javascript:;" onsubmit="submitForm(true)" style="display:none; width:100%;" id="settings">
 		<label for="nickname" style="display:inline-block; padding-bottom:4px; color:#1b1; font-weight:600;">Nickname:</label><br>
-		<input name="nickname" id="nickname" type="text" class="formtext" size="14" maxlength="14" style="max-width:240px;" autofocus>&nbsp;<span onclick="clearForm(0)" style="_margin-left:5px; user-select:none;">X</span><br>
+		<input id="nickname" class="formtext" name="nickname" type="text" pattern="[A-Za-z0-9]{1,16}" size="16" maxlength="16" style="max-width:240px;" autofocus>&nbsp;<span onclick="clearForm(0)" style="user-select:none;">X</span><br>
+
 		<div style="margin-top:6px;font-size:0.80em;">Nickname will be used to communicate with your callers when you are offline.</div>
 
 		<div id="madiv" style="display:none;">
