Settings text old: 'Nickname will be used to communicate with your callers when you are offline.' new: 'This is used as the default nickname when you make calls. You can change it on-the-fly for each of your contacts.'

--- a/webroot/callee/settings/index.html
+++ b/webroot/callee/settings/index.html
@@ -143,7 +143,7 @@ input:invalid {
 		<label for="nickname" style="display:inline-block; padding-bottom:4px; color:#1b1; font-weight:600;">Nickname:</label><br>
 		<input id="nickname" class="formtext" name="nickname" type="text" pattern="[A-Za-z0-9]{1,16}" size="16" maxlength="16" style="max-width:240px;" autofocus>&nbsp;<span onclick="clearForm(0)" style="user-select:none;">X</span><br>
 
-		<div style="margin-top:6px;font-size:0.80em;">Nickname will be used to communicate with your callers when you are offline.</div>
+		<div style="margin-top:6px;font-size:0.80em;">This is used as the default nickname when you make calls. You can change it on-the-fly for each of your contacts.</div>
 
 		<div id="madiv" style="display:none;">
 			<div id="maid" style="margin-top:14px;color:#1b1;font-weight:600;"></div>
