caller.js: waitingCaller msg 'Can you wait a bit...' with condensed layout; not showing calleeName

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -550,7 +550,7 @@ input:invalid {
 		<button id="hangupButton" class="mainbutton mainbuttonRed" disabled>Hangup</button>
 		<!--img id="onlineIndicator" src="" style="width:28px; margin:0.6em 0 0 0; user-select:none;"-->
 	</div>
-	<div id="muteMicDiv" style="padding-top:6px; padding-bottom:8px; _white-space:nowrap;display:none;">
+	<div id="muteMicDiv" style="padding-top:6px; padding-bottom:8px; display:none;">
 		<input type="checkbox" id="muteMic" class="checkbox" style="margin-left:5px;" />
 		<label id="muteMiclabel" for="muteMic" class="menulabel" style="font-size:0.9em;">Mute</label>
 	</div>
