contacts: csv export only available on web browsers

--- a/webroot/callee/contacts/index.html
+++ b/webroot/callee/contacts/index.html
@@ -59,7 +59,7 @@ a:hover {
 <div id="container">
 	<img src="../arrow-left.svg" id="arrowleft" onclick="history.back();" style="float:left; width:35px; margin-top:0px; margin-right:14px; z-index:100; user-select:none; cursor:pointer; transition:all 300ms ease-out; opacity:0.8; display:none;">
 	<h1 style="float:left; margin-top:3px;">WebCall Contacts</h1>
-	<div onclick="exportEntries();" style="float:right;margin-right:1px;margin-top:5px;font-size:1.1em;font-weight:600;opacity:0.9;cursor:pointer;">&#x21A7;</div>
+	<div id="exportEntries" onclick="exportEntries();" style="float:right;margin-right:1px;margin-top:5px;font-size:1.1em;font-weight:600;opacity:0.9;cursor:pointer;display:none;">&#x21A7;</div>
 	<div style="clear:both;"></div>
 
 	<div id="databox" style="overflow-y:auto;"></div>
