--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -475,6 +475,8 @@ input:invalid {
 	<div style="position:absolute; right:0px; top:0; z-index:110; background:#45dd; color:#fff; padding:10px 0px; line-height:2.6em; border-radius:3px; cursor:pointer;">
 		<div class="menuButton" id="callstats" onclick="openPostCallStats()">Call Stats</div>
 
+		<div class="menuButton" id="chatButtonlabel" _onclick="openPostCallStats()">TextChat</div>
+
 		<label class="menulabel" id="fileselectlabel" style="display:none; padding-left:20px;">
 			Send File
 			<input id="fileselect" type="file" style="display:none"></input>
@@ -581,12 +583,6 @@ input:invalid {
 			</form>
 		</div>
 	</div>
-	<button id="chatButton" style="display:none; margin-top:4px; padding-top:4px; padding-bottom:3px;">TextChat</button>
-
-<!--
-	<div id="calleeOffline" style="display:none">
-	</div>
--->
 
 	<div id="progressSend" style="width:95%;_max-width:360px;display:none;">
 		<div id="progressSendLabel">sending:</div>
