--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -475,7 +475,7 @@ input:invalid {
 	<div style="position:absolute; right:0px; top:0; z-index:110; background:#45dd; color:#fff; padding:10px 0px; line-height:2.6em; border-radius:3px; cursor:pointer;">
 		<div class="menuButton" id="callstats" onclick="openPostCallStats()">Call Stats</div>
 
-		<div class="menuButton" id="chatButtonlabel" _onclick="openPostCallStats()">TextChat</div>
+		<div class="menuButton" id="chatButtonlabel" style="display:none">TextChat</div>
 
 		<label class="menulabel" id="fileselectlabel" style="display:none; padding-left:20px;">
 			Send File
