caller css: hover for menulabel ('Send File' and 'Fullscreen' in hamburger)

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -215,6 +215,10 @@ button[disabled] {
 	_vertical-align:middle;
 	cursor:pointer;
 }
+.menulabel:hover {
+	color:#ff0;
+	outline:none;
+}
 
 .formlabel {
 	margin-left:2px;
